--- a/com.tibco.bwce.banq.account.service.application/k8s-dev.properties
+++ b/com.tibco.bwce.banq.account.service.application/k8s-dev.properties
@@ -3,7 +3,7 @@
 fabric8.label.container=banq-app
 fabric8.replicationController.name=banq-app
 fabric8.service.port=80
-fabric8.apply.namespace=development
+fabric8.apply.namespace=default
 fabric8.container.name=banq-app
 fabric8.replicas=1
 fabric8.service.containerPort=8080
@@ -14,6 +14,6 @@ fabric8.service.type=LoadBalancer
 fabric8.template=banq-app
 fabric8.label.project=banq-app
 fabric8.env.BW_PROFILE=Cloud
-fabric8.env.CONSUL_SERVER_URL=http\://146.148.42.122\:80
-fabric8.namespace=development
+fabric8.env.CONSUL_SERVER_URL=http\://104.197.227.155\:80
+fabric8.namespace=default
 fabric8.service.name=banq-dev-service
